update for numeric object constructor deprecation
For instances of casting primitive data types as numeric objects, the
approach that creates a new object from a constructor will not be
supported in future Java versions. The constructors Double(double),
Integer(int), and Long(long) work for Java 11 but deprecated.

This commit updates these commands with the reccommended method
`valueOf`. E.g. new Double(double) will be replaced with
Double.valueOf(double).