@@ -107,12 +107,12 @@ public class BAMtoscIDX {
 				
 		//Make sure we only add tags that have valid starts
 		if(recordStart > 0 && recordStart <= CHROMSTOP) {
-			if(BP.contains(new Integer(recordStart))) {
-				int index = BP.indexOf(new Integer(recordStart));
+			if(BP.contains(Integer.valueOf(recordStart))) {
+				int index = BP.indexOf(Integer.valueOf(recordStart));
 				if(sr.getReadNegativeStrandFlag()) {
-					R_OCC.set(index, new Integer(R_OCC.get(index).intValue() + 1));
+					R_OCC.set(index, Integer.valueOf(R_OCC.get(index).intValue() + 1));
 				} else {
-					F_OCC.set(index, new Integer(F_OCC.get(index).intValue() + 1));
+					F_OCC.set(index, Integer.valueOf(F_OCC.get(index).intValue() + 1));
 				}
 			} else {
 				//Sometimes the start coordinate will be out of order due to (-) strand correction
@@ -124,22 +124,22 @@ public class BAMtoscIDX {
 					}
 				}
 				if(index < BP.size() - 1) {
-					BP.add(index + 1, new Integer(recordStart));
+					BP.add(index + 1, Integer.valueOf(recordStart));
 					if(sr.getReadNegativeStrandFlag()) {
-						R_OCC.add(index + 1, new Integer(1));
-						F_OCC.add(index + 1, new Integer(0));
+						R_OCC.add(index + 1, Integer.valueOf(1));
+						F_OCC.add(index + 1, Integer.valueOf(0));
 					} else {
-						F_OCC.add(index + 1, new Integer(1));
-						R_OCC.add(index + 1, new Integer(0));
+						F_OCC.add(index + 1, Integer.valueOf(1));
+						R_OCC.add(index + 1, Integer.valueOf(0));
 					}
 				} else {
-					BP.add(new Integer(recordStart));
+					BP.add(Integer.valueOf(recordStart));
 					if(sr.getReadNegativeStrandFlag()) {
-						R_OCC.add(new Integer(1));
-						F_OCC.add(new Integer(0));
+						R_OCC.add(Integer.valueOf(1));
+						F_OCC.add(Integer.valueOf(0));
 					} else {
-						F_OCC.add(new Integer(1));
-						R_OCC.add(new Integer(0));
+						F_OCC.add(Integer.valueOf(1));
+						R_OCC.add(Integer.valueOf(0));
 					}
 				}
 			}
@@ -160,9 +160,9 @@ public class BAMtoscIDX {
 		
 		//Make sure we only add tags that have valid midpoints
 		if(recordMid > 0 && recordMid <= CHROMSTOP) {
-			if(BP.contains(new Integer(recordMid))) {
-				int index = BP.indexOf(new Integer(recordMid));
-				M_OCC.set(index, new Integer(M_OCC.get(index).intValue() + 1));
+			if(BP.contains(Integer.valueOf(recordMid))) {
+				int index = BP.indexOf(Integer.valueOf(recordMid));
+				M_OCC.set(index, Integer.valueOf(M_OCC.get(index).intValue() + 1));
 			} else {
 				//Sometimes the start coordinate will be out of order due to (-) strand correction
 				//Need to efficiently identify where to place it relative to the other bps
@@ -173,11 +173,11 @@ public class BAMtoscIDX {
 					}
 				}
 				if(index < BP.size() - 1) {
-					BP.add(index + 1, new Integer(recordMid));
-					M_OCC.add(index + 1, new Integer(1));
+					BP.add(index + 1, Integer.valueOf(recordMid));
+					M_OCC.add(index + 1, Integer.valueOf(1));
 				} else {
-					BP.add(new Integer(recordMid));
-					M_OCC.add(new Integer(1));
+					BP.add(Integer.valueOf(recordMid));
+					M_OCC.add(Integer.valueOf(1));
 				}
 			}
 		}
